fix flex-wrap setting

--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -145,6 +145,7 @@
 
           display: flex;
           list-style: none;
+          flex-wrap: wrap;
           > li { margin-right: 1rem; }
         }
       }
